# econ-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rates.csv
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
samples/: abmi_gdp.json  boe_iudbedr_rate.csv  dbnomics_kab9_wages.json  l55o_cpih.json
src/: boe.rs  cache.rs  dbnomics.rs  main.rs  ons.rs
