[package]
name = "econ-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "UK macroeconomic data (GDP, inflation, wages, Bank Rate) in your terminal"
repository = "https://github.com/dharimarzouq/econ-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
csv = "1"
